bitsandbytes/bnb/tests/ui/codecs_seal.stderr
error[E0277]: the trait bound `MyPrefix: bitstream::sealed::Sealed` is not satisfied
  --> tests/ui/codecs_seal.rs:19:22
   |
19 | impl CountPrefix for MyPrefix {
   |                      ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `bitstream::sealed::Sealed` is not implemented for `MyPrefix`
  --> tests/ui/codecs_seal.rs:7:1
   |
 7 | struct MyPrefix(u8);
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `bitstream::sealed::Sealed`:
             UInt<u128, N>
             UInt<u16, N>
             UInt<u32, N>
             UInt<u64, N>
             UInt<u8, N>
             u128
             u16
             u32
           and $N others
note: required by a bound in `CountPrefix`
  --> src/bitstream.rs
   |
   | pub trait CountPrefix: Bits + sealed::Sealed {
   |                               ^^^^^^^^^^^^^^ required by this bound in `CountPrefix`
   = note: `CountPrefix` is a "sealed trait", because to implement it you also need to implement `bnb::bitstream::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             u8
             u16
             u32
             u64
             u128
             bnb::UInt<u8, N>
             bnb::UInt<u16, N>
             bnb::UInt<u32, N>
           and $N others

error[E0277]: the trait bound `MyPrefix: bitstream::sealed::Sealed` is not satisfied
  --> tests/ui/codecs_seal.rs:28:17
   |
28 | impl Varint for MyPrefix {}
   |                 ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `bitstream::sealed::Sealed` is not implemented for `MyPrefix`
  --> tests/ui/codecs_seal.rs:7:1
   |
 7 | struct MyPrefix(u8);
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `bitstream::sealed::Sealed`:
             UInt<u128, N>
             UInt<u16, N>
             UInt<u32, N>
             UInt<u64, N>
             UInt<u8, N>
             u128
             u16
             u32
           and $N others
note: required by a bound in `Varint`
  --> src/codecs.rs
   |
   |     pub trait Varint: Bits + sealed::Sealed {}
   |                              ^^^^^^^^^^^^^^ required by this bound in `Varint`
   = note: `Varint` is a "sealed trait", because to implement it you also need to implement `bnb::bitstream::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             u8
             u16
             u32
             u64
             u128
             bnb::UInt<u8, N>
             bnb::UInt<u16, N>
             bnb::UInt<u32, N>
           and $N others
